separated interface from api

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1> Welcome to the Star Trek Species API!</h1>
+    <p>Interface = URL/api/species-name</p>
+    <p>E.g. URL/api/trill</p>
 </body>
 </html>
